--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,5 +1,11 @@
 .contactsList {
     padding: 0;
+    margin-left: 100px;
+    padding: 0 10px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 0px white;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(1px);
 }
 
 .contactsItem {
@@ -10,23 +16,28 @@
 
 .contactName {
     font-size: 18px;
+    color: aliceblue;
     margin: 5px 7px;
     font-weight: 500;
 }
 
 .deleteBtn {
     font-size: 16px;
-    width: 70px;
-    padding: 5px;
-    color: aliceblue;
+    width: 50px;
+    padding: 0 5px;
+    color: black;
     border: none;
     border-radius: 4px;
-    background-color: lightseagreen;
+    background-color: lightskyblue;
     box-shadow: 1px 1px 2px 1px gray;
     cursor: pointer;
 }
 
 .deleteBtn:hover {
-    color: black;
-    background-color: lightskyblue;
+    color: aliceblue;
+    background-color: cornflowerblue;
+}
+
+.deleteBtn:hover box-icon {
+    fill: aliceblue
 }
