--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,12 +1,19 @@
-label {
+.labelName {
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
+    margin-left: 100px;
+    color: white
 }
 
 .inputFilter {
     font-size: 16px;
     width: 160px;
-    padding: 5px;
+    padding: 6px;
+    color: aliceblue;
     border: none;
-    box-shadow: 1px 1px 2px 1px gray;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 0px white;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(1px);
 }
