--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
-/* @import-normalize; */
-/* bring in normalize.css styles */
-
 body {
-  margin: 0;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: antiquewhite;
+  background-image: url('./img/astronomy-g311023c79_1280.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 
